Fixed like button and recent notification header alignment

--- a/index.css
+++ b/index.css
@@ -74,3 +74,139 @@
     border-top: 1px solid #9d0003;
     border-bottom: 1px solid #9d0003;
 }
+
+.like-button{
+  color: #bd0404;
+  width: 1rem;
+  font-size: x-large;
+  position: absolute;
+  right: 36px;
+  display: block;
+ }
+ .margin-t{
+  margin-top: 9px !important;
+  margin-bottom: 9px !important;
+ }
+ .header-recent{
+  padding: 35px 70px 32px 20px;
+  color: #bd0404 !important;
+  border-bottom: 1px solid white;
+  display: block;
+}
+.header-recent h6 {
+ font-size: 1.1em;
+ font-weight: 350;
+}
+.reloadcircle { 
+  position: absolute;
+  width: 40px; 
+  height: 40px; 
+  border-radius: 50%;
+  line-height: 40px;
+  border: 3px solid #bd0404;
+  background: transparent;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  right: 10px;
+  top:15px;
+}
+
+.reloadcircle::before {
+  position: absolute;
+  width: 40px;
+  height: 40px;
+  line-height: 40px;
+  border-radius: 58px;
+  border: 3px solid transparent;
+  background: transparent; content: "";
+  background: linear-gradient(#bd0404,#f94e1a);
+  -webkit-mask: radial-gradient(farthest-side, transparent calc(100% - 2px),#fff 0);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  display: block;
+}
+
+.reload-icon{
+font-size: 1.5rem;
+display: block;
+}
+
+.text-center{
+  padding-left: 4rem;
+  color: #bd0404;
+  font-weight:370;
+ }
+
+ /* .label1{
+  margin-bottom:0px; display:inline-block;
+  } */
+  .nomination p{
+    font-size: 12px;
+    color: #2b2020;
+    font-weight: 600;
+    margin-bottom: 0 !important;
+    margin-top: 4px;
+  }
+  .nomination{
+    padding: 21px 25px 5px;
+    margin-top:10px;
+    /* border-bottom: solid 1px#bd0404 ; */
+    font-size: 13px;
+    }
+    .red{
+      color: #bd0404;
+    }
+.absa-badge2{
+  height: 35px;
+  width: 35px;
+  border-radius: 25px;
+  background-color: #bd0404;
+  color: white;
+  text-align: center;
+  font-size: 1.2rem;
+  line-height: 35px;
+  display: block;
+}
+.likes-1{
+  cursor: pointer;
+  display: block;
+}
+
+.nomination-border{
+  border-bottom: solid 1px#bd0404 ;
+}
+
+.duration{
+  color:#bd0404;
+  float: right;
+  margin-top: -1rem;
+  font-size: 12px;
+}
+
+.text-align{
+  text-align: justify;
+}
+.l-h-0-5{
+  line-height: 0.5;
+}
+.likes-badge  {
+  line-height: 20px;
+  height: 20px;
+  width: 20px;
+  border-radius: 50%;
+  font-size: 0.6rem;
+  background-color: #03bfff;
+  color: white;
+  margin-top: -9px;
+  position: absolute;
+  right: 10px;
+  text-align: center;
+}
+
+@media (max-width:1024px) {
+  .header-recent{
+    padding: 35px 70px 32px;
+  }
+}
